# higurashi-anki

./: README.md  pyproject.toml
src/higurashi_anki/: __main__.py
